--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a7cc8067-c6b9-4082-8986-75bb54c0fce6",
    "metadata": {},
    "outputs": [],
@@ -342,6 +342,25 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "08c58c0b-6eed-4181-bcaf-fcfa6980e4f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a set of x-values using np.linspace ranging from -10 to 10\n",
+    "x = np.linspace(-10, 10, 100)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75969939-2be5-46d3-9778-e0df001e3338",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
